# ips

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2020-11-30-044240_hits/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
