[package]
name = "ips"
version = "0.1.0"
authors = ["Nicolas Chan <nicolas@nicolaschan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.4", features = ["sqlite"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_sqlite_pool"]

